[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.4",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.41.1",
    "streamlit-extras>=0.5.0",
]
